--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Matt Jenkins <matt@majenko.co.uk>
 sentence=Use the PIC32 Change Notification pins as interrupts
 paragraph=ChangeNotification\n==================\n\nchipKIT Change Notification library\n
 url=https://github.com/MajenkoLibraries/ChangeNotification
-category=IO
+category=Signal Input/Output
 architectures=chipkit
 includes=ChangeNotification.h
